110-pihole/01_pihole_endpoints.yaml
  kind: Endpoints
  apiVersion: v1
  metadata:
    name: pihole-web
  subsets:
    - addresses:
        - ip: 192.168.0.29 #The IP Address of the external web server
      ports:
        - port: 2980
