110-pihole/02_pihole_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2980
