110-pihole/03_pihole_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pihole-web
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: pihole.internal.cluster.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: pihole-web
          servicePort: 80
